# file_synchronization

./: CMakeLists.txt  README.md
client/: c_config.txt  client.cpp
server/: s_config.txt  server.cpp
